--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ h3 {
   display: flex;
   align-items: center;
   margin-right: 15px;
+  flex-wrap: wrap;
 }
 
 .inputsWrapper {
@@ -107,4 +108,21 @@ select {
 
 .mb-4 {
   margin-bottom: 10px;
+}
+
+.labelfile {
+  display: block;
+  width: 100%;
+  text-align: left;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+button[disabled] {
+  opacity: .5;
+  cursor: not-allowed;
+}
+
+button[disabled]:hover {
+  background: rgba(14,211,207, 1);
 }
